# video2text

./: .env.example  .gitignore  LICENSE  MANIFEST.in  PYPI_GUIDE.md  README.md  audio_extractor.py  docker-compose.yml  downloader.py  file_utils.py  install.py  main.py  pyproject.toml  requirements.txt  stt_api.py  video_processor.py  web_app.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: Dockerfile  main.py  requirements.txt
backend/models/: transcription_request.py
backend/services/: subtitle_parser.py  video_processor.py  whisper_service.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  config.js
frontend/src/components/: Header.js  TranscriptionResult.js  VideoUploadForm.js  VideoUrlForm.js
scripts/: build_and_upload.bat  build_and_upload.py  build_and_upload.sh  pre_release_check.py  start_gui.py  start_server.py  version_bump.py
templates/: index.html
tests/: test_basic.py
video2text/: __init__.py  api.py  cli.py  config.py  downloader.py  gui.py  transcriber.py
